objects/mkto_si__InterestingMomentsCache__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__AccountLinkName__c</fullName>
        <label>AccountLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__AccountLink__c</fullName>
        <label>AccountLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__ActivityDT__c</fullName>
        <label>ActivityDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Campaign__c</fullName>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactLinkName__c</fullName>
        <label>ContactLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactLink__c</fullName>
        <label>ContactLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__Id__c</fullName>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MomentNote__c</fullName>
        <label>MomentNote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MomentType__c</fullName>
        <label>MomentType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__RowNum__c</fullName>
        <label>RowNum</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__TotalCount__c</fullName>
        <label>TotalCount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>InterestingMomentsCache</label>
    <nameField>
        <label>InterestingMomentsCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InterestingMomentsCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>